# TorrentRenamerCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app_config.json  credentials.json  fx.bat  generate_tests.py  schema.json  threading_rules.txt  vcpkg.json
.github/workflows/: x86-ubuntu.yml  x86-windows.yml
cmake/: Findcpr.cmake  Findfmt.cmake  Findglfw.cmake  Findimgui.cmake  Findrapidjson.cmake  Findspdlog.cmake
install/: README.md
res/: app_config.json  example-credentials.json
scripts/: cmake_configure.sh
scripts/ubuntu/: README.md  cmake_configure.sh  install_packages.sh  run.sh  torrent-renamer.desktop
scripts/windows/: cmake_configure.sh  create_package.sh
src/: Instrumentor.h  app.cpp  app.h  app_config.cpp  app_credentials_schema.cpp  app_credentials_schema.h  app_folder.cpp  console_colours.h  file_loading.cpp  file_loading.h  folder_diff.cpp  folder_diff.h  gui_ext.cpp  gui_ext.h  main_cli_test.cpp  main_gui.cpp  os_dep.cpp  os_dep.h  renamer.cpp  renamer.h  scanner.cpp  scanner.h  se_regex.cpp  se_regex.h  tvdb_api.cpp  tvdb_api.h  tvdb_api_schema.cpp  tvdb_api_schema.h
src/app/: app.cpp  app.h  app_config.cpp  app_config.h  app_credentials.cpp  app_credentials.h  app_credentials_schema.cpp  app_file_state.cpp  app_file_state.h  app_folder.cpp  app_folder.h  app_folder_bookmarks.h  app_folder_bookmarks_json.cpp  app_folder_bookmarks_json.h  app_folder_state.cpp  app_folder_state.h  app_schemas.cpp  app_schemas.h  file_descriptor.cpp  file_descriptor.h  file_intents.cpp  file_intents.h
src/gui/: gui_ext.cpp  gui_ext.h  render_app.cpp  render_app.h
src/renaming/: file_intent.h  managed_folder.cpp  managed_folder.h  renamer.cpp  renamer.h  renaming_config.h  scanner.cpp  scanner.h  se_regex.cpp  se_regex.h
src/tvdb_api/: tvdb_api.cpp  tvdb_api.h  tvdb_api_schema.cpp  tvdb_api_schema.h  tvdb_json.cpp  tvdb_json.h  tvdb_models.h
src/util/: Instrumentor.h  expected.hpp  file_loading.cpp  file_loading.h
